Finished 1.1 point cloud generation

--- a/hw3/hw3_1.1.ipynb
+++ b/hw3/hw3_1.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
-    "numOfCameras = 1"
+    "numOfCameras = 4"
    ]
   },
   {
@@ -59,51 +59,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(360, 640, 3)\n",
+      "(360, 640, 3)\n",
+      "(360, 640, 3)\n",
       "(360, 640, 3)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "cam = [None] * numOfCameras\n",
     "rgb = [None] * numOfCameras\n",
     "depth = [None] * numOfCameras\n",
-    "pclOrig = [None] * numOfCameras\n",
     "pcl = [None] * numOfCameras\n",
+    "pclFrames = [None] * numOfCameras\n",
+    "\n",
+    "\n",
     "for i in range(numOfCameras):\n",
     "  cam[i] = ry.CameraView(C)\n",
     "  cam[i].setCamera('camera'+str(i+1))\n",
     "  rgb[i], depth[i] = cam[i].computeImageAndDepth(C)\n",
-    "  pclOrig[i] = ry.depthImage2PointCloud(depth[i], cam[i].getFxycxy())\n",
     "  pcl[i] = ry.depthImage2PointCloud(depth[i], cam[i].getFxycxy())\n",
-    "  print(pcl[i].shape)\n",
-    "  \n",
-    "pclFramesOrig = [None] * numOfCameras\n",
-    "\n",
-    "for i in range(numOfCameras):\n",
-    "  pclFramesOrig[i] = C.addFrame('pclOrig'+str(i+1))\n",
-    "  pclFramesOrig[i].setPointCloud(pcl[i], [ 0, 255, 0])\n",
-    "\n",
-    "C.view()\n",
-    "  \n",
-    "# print(rgb.shape, depth.shape, pcl1.shape)\n",
-    "# print(C.view_fxycxy())"
+    "  print(pcl[i].shape)"
    ]
   },
   {
@@ -115,102 +98,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 246,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rot [[ 0.70710678  0.          0.70710678]\n",
-      " [-0.61237244 -0.5         0.61237244]\n",
-      " [ 0.35355339 -0.8660254  -0.35355339]]\n",
-      "Transpose of Rot [[ 0.70710678 -0.61237244  0.35355339]\n",
-      " [ 0.         -0.5        -0.8660254 ]\n",
-      " [ 0.70710678  0.61237244 -0.35355339]]\n",
-      "\n",
-      "-- WARNING:kin.cpp:addFrame:193(-1) frame already exists! returning existing without modifications!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(numOfCameras):\n",
-    "  curCam = C.getFrame(\"camera\"+str(i+1))\n",
-    "  curCamX = curCam.getRelativePosition()[0]\n",
-    "  curCamY = curCam.getRelativePosition()[1]\n",
-    "  curCamZ = curCam.getRelativePosition()[2]\n",
-    "  \n",
-    "  curCamPos = curCam.getRelativePosition()\n",
+    "  curCam = C.getFrame(\"camera\"+str(i+1))  \n",
     "  curCamRotMat = curCam.getRotationMatrix()\n",
-    "  curCamRotMatTransposed = np.transpose(curCamRotMat)\n",
-    "  \n",
-    "  t_wc = -np.dot(curCamRotMatTransposed, curCamPos)\n",
-    "\n",
-    "  T_wc = np.eye(4)\n",
-    "  T_wc[:3, :3] = curCamRotMatTransposed\n",
-    "  T_wc[:3, 3] = t_wc\n",
-    "  \n",
-    "\n",
-    "\n",
-    "  \n",
+    "  curCamPos = curCam.getPosition()\n",
     "    \n",
-    "  for h in range(pclOrig[i].shape[0]):    # Iterate over height\n",
-    "    for w in range(pclOrig[i].shape[1]):  # Iterate over width\n",
-    "      point = pclOrig[i][h, w]            # Get the 3D point [x, y, z]\n",
-    "      eachX, eachY, eachZ = point     # Unpack point coordinates\n",
+    "  for h in range(pcl[i].shape[0]):    # Iterate over height\n",
+    "    for w in range(pcl[i].shape[1]):  # Iterate over width\n",
+    "      point = pcl[i][h, w]            # Get the 3D point [x, y, z]\n",
+    "     \n",
+    "      # Apply rotation\n",
+    "      rotated_point = np.dot(curCamRotMat, point)  # Rotate the point\n",
     "      \n",
-    "      # now make these positions relative to the world and hence bounding box\n",
-    "      eachX = eachX - curCamX\n",
-    "      eachY = eachY - curCamY\n",
-    "      eachZ = eachZ - curCamZ\n",
+    "      # Apply translation\n",
+    "      transformed_point = rotated_point + curCamPos  # Add the camera position\n",
     "      \n",
-    "      pcl[i][h, w] = [eachX, eachY, eachZ]\n",
-    "      \n",
+    "      pcl[i][h, w] = transformed_point      \n",
     "      \n",
     "\n",
-    "pclFrames = [None] * numOfCameras\n",
+    "# # Visualize the point cloud\n",
+    "# pclFrames = [None] * numOfCameras\n",
     "\n",
-    "for i in range(numOfCameras):\n",
-    "  # pclFrames[i] = C.addFrame('pcl'+str(i+1), 'camera'+str(i+1))\n",
-    "  pclFrames[i] = C.addFrame('pcl'+str(i+1), 'world')\n",
-    "  # pclFrames[i].setPose('t(-0.5 -0.1 1.08) d(-120 1 0 0) d(45 0 1 0)')\n",
-    "  pclFrames[i].setPointCloud(pcl[i], [ 255, 0, 0])\n",
-    "\n",
-    "\n",
-    "# C.view()\n",
-    "\n",
-    "# # print(C.getFrameNames())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Alternatively, Normalise using frames"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 421,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 421,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# pclFramesOrig[0].setPose('t(-0.5 -0.1 1.08) d(-120 1 0 0) d(45 0 1 0)')\n",
-    "# pclFramesOrig[1].setPose('t(0.5 -0.1 1.08) d(-120 1 0 0) d(-45 0 1 0)')\n",
-    "# pclFramesOrig[2].setPose('t(0.5 1.0 1.08) d(180 0 1 0) d(60 1 0 0) d(45 0 1 0)')\n",
-    "# pclFramesOrig[3].setPose('t(-0.5 1.0 1.08) d(180 0 1 0) d(60 1 0 0) d(-45 0 1 0)')\n",
-    "C.view()"
+    "# for i in range(numOfCameras):\n",
+    "#   pclFrames[i] = C.addFrame('pcl'+str(i+1), 'world')\n",
+    "#   pclFrames[i].setPointCloud(pcl[i], pclColor)\n",
+    "# C.view()"
    ]
   },
   {
@@ -222,32 +138,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 398,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# bounding_box = C.addFrame(\"bounding_box\", \"bin\")\n",
-    "# bounding_box.setShape(ry.ST.box, size=[0.6, 0.35, 0.1])  # A box of size 0.5x0.5x0.5\n",
-    "# bounding_box.setRelativePosition([0., -0.05, 0.08])  # Position the bounding box\n",
+    "centre = C.getFrame(\"bin\").getPosition()\n",
+    "centre[2] = centre[2] + 0.083  # Raise slightly to remove bin surface\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "centre = [0, 0.4, 0.68]\n",
-    "# offsets = [0.05, 0.35, 0.3]\n",
-    "offsets = [.1, .1, .1]\n",
+    "off = .1\n",
+    "offsets = [0.3, 0.25, 0.05]\n",
     "\n",
     "bounding_box_min_x = centre[0] - offsets[0]\n",
     "bounding_box_max_x = centre[0] + offsets[0]\n",
@@ -258,27 +157,56 @@
     "bounding_box_min_z = centre[2] - offsets[2]\n",
     "bounding_box_max_z = centre[2] + offsets[2]\n",
     "\n",
-    "# print(bounding_box.getPosition())\n",
     "\n",
     "for i in range(numOfCameras):\n",
-    "  for h in range(pcl[i].shape[0]):  # Iterate over height\n",
-    "    for w in range(pcl[i].shape[1]):  # Iterate over width\n",
-    "      point = pcl[i][h, w]  # Get the 3D point [x, y, z]\n",
-    "      eachX, eachY, eachZ = point  # Unpack point coordinates\n",
+    "  for h in range(pcl[i].shape[0]):  \n",
+    "    for w in range(pcl[i].shape[1]):  \n",
+    "      point = pcl[i][h, w] \n",
+    "      eachX, eachY, eachZ = point  \n",
     "      \n",
-    "    # Check if the point is within the bounding box\n",
-    "    if not (bounding_box_min_x < eachX < bounding_box_max_x and\n",
-    "      bounding_box_min_y < eachY < bounding_box_max_y and\n",
-    "      bounding_box_min_z < eachZ < bounding_box_max_z):\n",
-    "        pcl[i][h, w] = [0, 0, 0] \n",
-    "\n",
-    "\n",
-    "C.view()"
+    "      # Check if the point is within the bounding box\n",
+    "      if not (bounding_box_min_x < eachX < bounding_box_max_x and\n",
+    "              bounding_box_min_y < eachY < bounding_box_max_y and\n",
+    "              bounding_box_min_z < eachZ < bounding_box_max_z):\n",
+    "          pcl[i][h, w] = [0, 0, 0]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now we can view the bounded point cloud"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# pclFrames = [None] * numOfCameras\n",
+    "\n",
+    "for i in range(numOfCameras):\n",
+    "  pclFrames[i] = C.addFrame('pcl'+str(i+1), 'world')\n",
+    "  pclFrames[i].setPointCloud(pcl[i], pclColor)\n",
+    "  \n",
+    "C.view()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
