Done with normal generation using open3d

--- a/hw3/hw3_1.1.ipynb
+++ b/hw3/hw3_1.1.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
       "/home/vboxuser/Desktop/CS449/rai_venv/lib/python3.8/site-packages/robotic/rai-robotModels/environment.g\n"
      ]
     }
@@ -17,7 +20,9 @@
     "import robotic as ry\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import open3d as o3d\n",
     "import time\n",
+    "\n",
     "pclColor = [0,0,255]\n",
     "max_trials = 10\n",
     "max_vel = 100\n",
@@ -42,15 +47,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 244,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "numOfCameras = 4"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -59,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -74,11 +70,11 @@
     }
    ],
    "source": [
+    "numOfCameras = 4\n",
     "cam = [None] * numOfCameras\n",
     "rgb = [None] * numOfCameras\n",
     "depth = [None] * numOfCameras\n",
     "pcl = [None] * numOfCameras\n",
-    "pclFrames = [None] * numOfCameras\n",
     "\n",
     "\n",
     "for i in range(numOfCameras):\n",
@@ -98,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,12 +171,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now we can view the bounded point cloud"
+    "### Now combine pcl from the 4 cameras and view the final bounded point cloud"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +185,7 @@
        "0"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,33 +193,41 @@
    "source": [
     "# pclFrames = [None] * numOfCameras\n",
     "\n",
-    "for i in range(numOfCameras):\n",
-    "  pclFrames[i] = C.addFrame('pcl'+str(i+1), 'world')\n",
-    "  pclFrames[i].setPointCloud(pcl[i], pclColor)\n",
+    "pclCombined = np.concatenate(pcl, axis=0)\n",
+    "pclFrame = C.addFrame('pcl', 'world')\n",
+    "pclFrame.setPointCloud(pclCombined, pclColor)\n",
     "  \n",
-    "C.view()\n"
+    "C.view()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now we do the normals usoing open3d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# finalpcl = pcl[0] + pcl[1] + pcl[2] + pcl[3]\n",
-    "# finalpclFrame = C.addFrame('finalpclFrame', 'world')\n",
-    "# finalpclFrame.setPointCloud(finalpcl, [ 255, 0, 0])\n",
-    "# C.view()\n",
+    "# Reshape to a 2D array\n",
+    "pclCombined_reshaped = pclCombined.reshape(-1, 3)  # Collapse the first two dimensions into one\n",
     "\n",
-    "# print(\"pcl1: \", pcl[0].shape)\n",
-    "# print(\"pcl2: \", pcl[1].shape)\n",
+    "print(pclCombined_reshaped.shape)  # Should now be (1440 * 640, 3)\n",
     "\n",
-    "# extract the point cloud inside bounding box\n",
-    "# boundingBox = [0.5, 0.5, 0.5, 0.6, 0.6, 0.6]\n",
+    "# Convert to Open3D point cloud\n",
+    "pcd = o3d.geometry.PointCloud()\n",
+    "pcd.points = o3d.utility.Vector3dVector(pclCombined_reshaped)\n",
     "\n",
-    "# print positions of pcl points\n",
-    "# for point in pcl[0]:\n",
-    "  # print(point.getPosition())\n"
+    "# Visualize the point cloud\n",
+    "# o3d.visualization.draw_geometries([pcd])\n",
+    "print(\"Downsample the point cloud with a voxel of 0.05\")\n",
+    "downpcd = pcd.voxel_down_sample(voxel_size=0.005)\n",
+    "downpcd.estimate_normals(search_param=o3d.geometry.KDTreeSearchParamHybrid(radius=0.1, max_nn=30))\n",
+    "o3d.visualization.draw_geometries([downpcd])\n"
    ]
   }
  ],
