Done with separating object k Means from sklearn

--- a/hw3/hw3_1.1.ipynb
+++ b/hw3/hw3_1.1.ipynb
@@ -2,16 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
       "/home/vboxuser/Desktop/CS449/rai_venv/lib/python3.8/site-packages/robotic/rai-robotModels/environment.g\n"
      ]
     }
@@ -22,6 +19,7 @@
     "import numpy as np\n",
     "import open3d as o3d\n",
     "import time\n",
+    "from sklearn.cluster import KMeans\n",
     "\n",
     "pclColor = [0,0,255]\n",
     "max_trials = 10\n",
@@ -55,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +183,7 @@
        "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,9 +207,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(921600, 3)\n",
+      "Downsample the point cloud with a voxel of 0.05\n",
+      "[[ 0.69495015 -0.70766274  0.12750582]\n",
+      " [-0.02259401 -0.99655009 -0.07985879]\n",
+      " [-0.01506134 -0.96045624 -0.27802331]\n",
+      " ...\n",
+      " [ 0.97673216  0.09858054 -0.19046302]\n",
+      " [ 0.71696324 -0.69575119 -0.04352002]\n",
+      " [ 0.72049602 -0.66871246 -0.18360048]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Reshape to a 2D array\n",
     "pclCombined_reshaped = pclCombined.reshape(-1, 3)  # Collapse the first two dimensions into one\n",
@@ -227,7 +241,52 @@
     "print(\"Downsample the point cloud with a voxel of 0.05\")\n",
     "downpcd = pcd.voxel_down_sample(voxel_size=0.005)\n",
     "downpcd.estimate_normals(search_param=o3d.geometry.KDTreeSearchParamHybrid(radius=0.1, max_nn=30))\n",
-    "o3d.visualization.draw_geometries([downpcd])\n"
+    "o3d.visualization.draw_geometries([downpcd])\n",
+    "# print list of normals\n",
+    "print(np.asarray(downpcd.normals))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now we do the clustering using kmeans from sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vboxuser/Desktop/CS449/rai_venv/lib/python3.8/site-packages/sklearn/cluster/_kmeans.py:1416: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  super()._check_params_vs_input(X, default_n_init=10)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 ... 1 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cluster using kmeans from sklearn, there are 3 objects in the point cloud so we will use 3 clusters\n",
+    "kmeans = KMeans(n_clusters=3, random_state=0).fit(np.asarray(downpcd.points))\n",
+    "print(kmeans.labels_)\n",
+    "\n",
+    "# Visualize the clusters\n",
+    "clusters = []\n",
+    "for i in range(3):\n",
+    "  cluster = downpcd.select_by_index(np.where(kmeans.labels_ == i)[0])\n",
+    "  cluster.paint_uniform_color([(i == 0), (i == 1), (i == 2)])\n",
+    "  clusters.append(cluster)\n",
+    "  \n",
+    "o3d.visualization.draw_geometries(clusters)\n"
    ]
   }
  ],
