--- a/hw3/hw3_1.1.ipynb
+++ b/hw3/hw3_1.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,12 +132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "centre = C.getFrame(\"bin\").getPosition()\n",
-    "centre[2] = centre[2] + 0.083  # Raise slightly to remove bin surface\n",
+    "centre[2] = centre[2] + 0.087  # Raise slightly to remove bin surface\n",
     "\n",
     "off = .1\n",
     "offsets = [0.3, 0.25, 0.05]\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,12 +202,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 1.2 Prediction Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "voxelSize = 0.008\n",
+    "numOfObjects = 3\n",
+    "degToleration = 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Now we do the normals usoing open3d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -215,14 +233,7 @@
      "output_type": "stream",
      "text": [
       "(921600, 3)\n",
-      "Downsample the point cloud with a voxel of 0.05\n",
-      "[[ 0.69495015 -0.70766274  0.12750582]\n",
-      " [-0.02259401 -0.99655009 -0.07985879]\n",
-      " [-0.01506134 -0.96045624 -0.27802331]\n",
-      " ...\n",
-      " [ 0.97673216  0.09858054 -0.19046302]\n",
-      " [ 0.71696324 -0.69575119 -0.04352002]\n",
-      " [ 0.72049602 -0.66871246 -0.18360048]]\n"
+      "Downsample the point cloud with a voxel of 0.05\n"
      ]
     }
    ],
@@ -236,14 +247,16 @@
     "pcd = o3d.geometry.PointCloud()\n",
     "pcd.points = o3d.utility.Vector3dVector(pclCombined_reshaped)\n",
     "\n",
-    "# Visualize the point cloud\n",
+    "# #  Visualize the point cloud\n",
     "# o3d.visualization.draw_geometries([pcd])\n",
     "print(\"Downsample the point cloud with a voxel of 0.05\")\n",
-    "downpcd = pcd.voxel_down_sample(voxel_size=0.005)\n",
+    "downpcd = pcd.voxel_down_sample(voxel_size=voxelSize)\n",
     "downpcd.estimate_normals(search_param=o3d.geometry.KDTreeSearchParamHybrid(radius=0.1, max_nn=30))\n",
-    "o3d.visualization.draw_geometries([downpcd])\n",
-    "# print list of normals\n",
-    "print(np.asarray(downpcd.normals))\n"
+    "# o3d.visualization.draw_geometries([downpcd], normals=True)\n",
+    "\n",
+    "# # print list of normals\n",
+    "# normals = np.asarray(downpcd.normals)\n",
+    "# print(normals)"
    ]
   },
   {
@@ -255,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -270,24 +283,191 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 ... 1 0 0]\n"
+      "[0 1 1 ... 0 1 1]\n",
+      "Normals are already estimated.\n",
+      "Normal magnitudes (first 10): [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "Are normals normalized?  True\n"
      ]
     }
    ],
    "source": [
     "# Cluster using kmeans from sklearn, there are 3 objects in the point cloud so we will use 3 clusters\n",
-    "kmeans = KMeans(n_clusters=3, random_state=0).fit(np.asarray(downpcd.points))\n",
+    "kmeans = KMeans(n_clusters=numOfObjects, random_state=0).fit(np.asarray(downpcd.points))\n",
     "print(kmeans.labels_)\n",
     "\n",
     "# Visualize the clusters\n",
     "clusters = []\n",
-    "for i in range(3):\n",
+    "for i in range(numOfObjects):\n",
     "  cluster = downpcd.select_by_index(np.where(kmeans.labels_ == i)[0])\n",
     "  cluster.paint_uniform_color([(i == 0), (i == 1), (i == 2)])\n",
     "  clusters.append(cluster)\n",
     "  \n",
-    "o3d.visualization.draw_geometries(clusters)\n"
+    "# Check if normals are estimated\n",
+    "if downpcd.has_normals():\n",
+    "    print(\"Normals are already estimated.\")\n",
+    "else:\n",
+    "    print(\"Normals are not estimated yet. Estimating now...\")\n",
+    "    downpcd.estimate_normals(search_param=o3d.geometry.KDTreeSearchParamHybrid(radius=0.1, max_nn=30))\n",
+    "    print(\"Normals estimated.\")\n",
+    "\n",
+    "# Verify magnitudes of normals\n",
+    "normals = np.asarray(downpcd.normals)\n",
+    "magnitudes = np.linalg.norm(normals, axis=1)\n",
+    "print(\"Normal magnitudes (first 10):\", magnitudes[:10])\n",
+    "print(\"Are normals normalized? \", np.allclose(magnitudes, 1.0, atol=1e-6))\n",
+    "\n",
+    "# # Visualize point cloud with normals\n",
+    "# print(\"Visualizing the point cloud with normals...\")\n",
+    "# o3d.visualization.draw_geometries([downpcd], point_show_normal=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fixing normals for Cluster 1...\n",
+      "Reorienting normals...\n",
+      "Fixing normals for Cluster 2...\n",
+      "Reorienting normals...\n",
+      "Fixing normals for Cluster 3...\n",
+      "Reorienting normals...\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fix normals orientation by aligning them towards a camera position\n",
+    "def reorient_normals(cluster):\n",
+    "    print(\"Reorienting normals...\")\n",
+    "    viewpoint = np.array([0, 0, 0])  # Replace with the actual camera or world origin\n",
+    "    cluster.orient_normals_towards_camera_location(camera_location=viewpoint)\n",
+    "\n",
+    "# Reorient normals for each cluster\n",
+    "for i, cluster in enumerate(clusters):\n",
+    "    print(f\"Fixing normals for Cluster {i+1}...\")\n",
+    "    reorient_normals(cluster)\n",
+    "\n",
+    "# # Visualize the corrected normals\n",
+    "# for i, cluster in enumerate(clusters):\n",
+    "#     print(f\"Visualizing corrected normals for Cluster {i+1}...\")\n",
+    "#     o3d.visualization.draw_geometries([cluster], point_show_normal=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now we find antipodal grasp points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing Cluster 1...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_4495/1478565827.py:14: RuntimeWarning: invalid value encountered in arccos\n",
+      "  angle = np.arccos(dot_product)  # Angle in radians\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of potential grasp pairs in Cluster 1: 77\n",
+      "Visualizing grasp pairs for Cluster 1...\n",
+      "Visualizing grasp pairs...\n",
+      "Processing Cluster 2...\n",
+      "Number of potential grasp pairs in Cluster 2: 402\n",
+      "Visualizing grasp pairs for Cluster 2...\n",
+      "Visualizing grasp pairs...\n",
+      "Processing Cluster 3...\n",
+      "Number of potential grasp pairs in Cluster 3: 194\n",
+      "Visualizing grasp pairs for Cluster 3...\n",
+      "Visualizing grasp pairs...\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_antipodal_grasp_points(cluster):\n",
+    "    points = np.asarray(cluster.points)\n",
+    "    normals = np.asarray(cluster.normals)\n",
+    "    \n",
+    "    grasp_pairs = []\n",
+    "    \n",
+    "    # Iterate through all point pairs\n",
+    "    for i in range(len(points)):\n",
+    "        for j in range(i + 1, len(points)):\n",
+    "            # Compute the angle between normals\n",
+    "            normal_i = normals[i]\n",
+    "            normal_j = normals[j]\n",
+    "            dot_product = np.dot(normal_i, normal_j)\n",
+    "            angle = np.arccos(dot_product)  # Angle in radians\n",
+    "            \n",
+    "            # Check if angle is close to 180 degrees (antipodal condition)\n",
+    "            if np.abs(np.degrees(angle) - 180) < degToleration:  # 10-degree tolerance\n",
+    "                grasp_pairs.append((i, j))\n",
+    "    \n",
+    "    return grasp_pairs\n",
+    "\n",
+    "def visualize_grasp_pairs(cluster, grasp_pairs):\n",
+    "    import open3d as o3d\n",
+    "\n",
+    "    points = np.asarray(cluster.points)\n",
+    "    lines = []\n",
+    "    line_colors = []\n",
+    "\n",
+    "    # Create lines connecting grasp pairs\n",
+    "    for pair in grasp_pairs:\n",
+    "        idx1, idx2 = pair\n",
+    "        lines.append([idx1, idx2])\n",
+    "        line_colors.append([1, 0, 0])  # Red lines for grasp pairs\n",
+    "\n",
+    "    # Create Open3D line set for visualization\n",
+    "    line_set = o3d.geometry.LineSet()\n",
+    "    line_set.points = o3d.utility.Vector3dVector(points)\n",
+    "    line_set.lines = o3d.utility.Vector2iVector(lines)\n",
+    "    line_set.colors = o3d.utility.Vector3dVector(line_colors)\n",
+    "\n",
+    "    # Visualize\n",
+    "    print(\"Visualizing grasp pairs...\")\n",
+    "    o3d.visualization.draw_geometries([cluster, line_set])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Process each cluster\n",
+    "for i, cluster in enumerate(clusters):\n",
+    "    print(f\"Processing Cluster {i+1}...\")\n",
+    "    \n",
+    "    grasp_points = find_antipodal_grasp_points(cluster)\n",
+    "    print(f\"Number of potential grasp pairs in Cluster {i+1}: {len(grasp_points)}\")\n",
+    "    \n",
+    "    print(f\"Visualizing grasp pairs for Cluster {i+1}...\")\n",
+    "    visualize_grasp_pairs(cluster, grasp_points)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
