Now normals work nice, changed the camera orientation

--- a/hw3/hw3_1.1.ipynb
+++ b/hw3/hw3_1.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -14,11 +14,12 @@
     }
    ],
    "source": [
-    "import robotic as ry\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import open3d as o3d\n",
     "import time\n",
+    "import random\n",
+    "import numpy as np\n",
+    "import robotic as ry\n",
+    "import open3d as o3d\n",
+    "import matplotlib.pyplot as plt\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
     "pclColor = [0,0,255]\n",
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +184,7 @@
        "0"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,13 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "voxelSize = 0.008\n",
+    "voxelSize = 0.006\n",
     "numOfObjects = 3\n",
-    "degToleration = 10"
+    "degToleration = 6"
    ]
   },
   {
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +253,7 @@
     "print(\"Downsample the point cloud with a voxel of 0.05\")\n",
     "downpcd = pcd.voxel_down_sample(voxel_size=voxelSize)\n",
     "downpcd.estimate_normals(search_param=o3d.geometry.KDTreeSearchParamHybrid(radius=0.1, max_nn=30))\n",
-    "# o3d.visualization.draw_geometries([downpcd], normals=True)\n",
+    "# o3d.visualization.draw_geometries([downpcd])\n",
     "\n",
     "# # print list of normals\n",
     "# normals = np.asarray(downpcd.normals)\n",
@@ -268,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 1 ... 0 1 1]\n",
+      "[1 1 1 ... 0 1 2]\n",
       "Normals are already estimated.\n",
       "Normal magnitudes (first 10): [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
       "Are normals normalized?  True\n"
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +344,7 @@
     "# Fix normals orientation by aligning them towards a camera position\n",
     "def reorient_normals(cluster):\n",
     "    print(\"Reorienting normals...\")\n",
-    "    viewpoint = np.array([0, 0, 0])  # Replace with the actual camera or world origin\n",
+    "    viewpoint = np.array([0, 0, 10])  # Replace with the actual camera or world origin\n",
     "    cluster.orient_normals_towards_camera_location(camera_location=viewpoint)\n",
     "\n",
     "# Reorient normals for each cluster\n",
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +381,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4495/1478565827.py:14: RuntimeWarning: invalid value encountered in arccos\n",
+      "/tmp/ipykernel_3736/1005914828.py:14: RuntimeWarning: invalid value encountered in arccos\n",
       "  angle = np.arccos(dot_product)  # Angle in radians\n"
      ]
     },
@@ -388,17 +389,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of potential grasp pairs in Cluster 1: 77\n",
+      "Number of potential grasp pairs in Cluster 1: 545\n",
       "Visualizing grasp pairs for Cluster 1...\n",
       "Visualizing grasp pairs...\n",
       "Processing Cluster 2...\n",
-      "Number of potential grasp pairs in Cluster 2: 402\n",
+      "Number of potential grasp pairs in Cluster 2: 232\n",
       "Visualizing grasp pairs for Cluster 2...\n",
       "Visualizing grasp pairs...\n",
-      "Processing Cluster 3...\n",
-      "Number of potential grasp pairs in Cluster 3: 194\n",
-      "Visualizing grasp pairs for Cluster 3...\n",
-      "Visualizing grasp pairs...\n"
+      "Processing Cluster 3...\n"
      ]
     }
    ],
@@ -448,8 +446,6 @@
     "    o3d.visualization.draw_geometries([cluster, line_set])\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "# Process each cluster\n",
     "for i, cluster in enumerate(clusters):\n",
     "    print(f\"Processing Cluster {i+1}...\")\n",
@@ -458,8 +454,14 @@
     "    print(f\"Number of potential grasp pairs in Cluster {i+1}: {len(grasp_points)}\")\n",
     "    \n",
     "    print(f\"Visualizing grasp pairs for Cluster {i+1}...\")\n",
-    "    visualize_grasp_pairs(cluster, grasp_points)\n",
-    "    \n"
+    "    visualize_grasp_pairs(cluster, grasp_points)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now we do the KOMO problem, ig we run all the points and try to get the feasible ones?"
    ]
   },
   {
