Now we have  grasp pair

--- a/hw3/hw3_1.1.ipynb
+++ b/hw3/hw3_1.1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,12 +198,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.2 Antipodal Grasp Detection Algorithm"
+    "# 1.2.1 Antipodal Grasp Detection Algorithm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "0"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 422,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [
     {
@@ -556,18 +556,15 @@
      "text": [
       "Number of potential grasp pairs in Cluster 1: 3\n",
       "Filtered grasp pairs for Cluster 1: 189\n",
-      "Visualizing grasp pairs for Cluster 1...\n",
-      "Visualizing grasp pairs...\n",
       "Processing Cluster 2...\n",
       "Number of potential grasp pairs in Cluster 2: 3\n",
       "Filtered grasp pairs for Cluster 2: 90\n",
-      "Visualizing grasp pairs for Cluster 2...\n",
-      "Visualizing grasp pairs...\n",
       "Processing Cluster 3...\n",
       "Number of potential grasp pairs in Cluster 3: 3\n",
       "Filtered grasp pairs for Cluster 3: 53\n",
-      "Visualizing grasp pairs for Cluster 3...\n",
-      "Visualizing grasp pairs...\n"
+      "Best grasp pair for Cluster 1: (228, 1138) with distance closest to average 0.07315048466477161\n",
+      "Best grasp pair for Cluster 2: (210, 648) with distance closest to average 0.04801003655110249\n",
+      "Best grasp pair for Cluster 3: (151, 298) with distance closest to average 0.04188608402982609\n"
      ]
     }
    ],
@@ -585,33 +582,111 @@
     "    print(f\"Filtered grasp pairs for Cluster {i+1}: {len(grasp_pairs[i])}\")\n",
     "\n",
     "    \n",
-    "    print(f\"Visualizing grasp pairs for Cluster {i+1}...\")\n",
-    "    visualize_grasp_pairs(cluster, grasp_pairs[i])\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Now we do the KOMO problem, ig we run all the points and try to get the feasible ones?"
+    "    # print(f\"Visualizing grasp pairs for Cluster {i+1}...\")\n",
+    "    # visualize_grasp_pairs(cluster, grasp_pairs[i])\n",
+    "    \n",
+    "# Finally, we need to select the best grasp pair for each object\n",
+    "# We will select the pair with the avg distance between the two points\n",
+    "# This is a simple heuristic, and there are more sophisticated methods available\n",
+    "\n",
+    "best_pairs = [None] * len(clusters)\n",
+    "for i, cluster in enumerate(clusters):\n",
+    "    points = np.asarray(cluster.points)\n",
+    "    grasp_pair = grasp_pairs[i]\n",
+    "    distances = []\n",
+    "    \n",
+    "    # Calculate distances for all grasp pairs\n",
+    "    for pair in grasp_pair:\n",
+    "        idx1, idx2 = pair\n",
+    "        point1, point2 = points[idx1], points[idx2]\n",
+    "        distance = np.linalg.norm(point2 - point1)\n",
+    "        distances.append(distance)\n",
+    "    \n",
+    "    # Calculate the average distance\n",
+    "    avg_distance = np.mean(distances)\n",
+    "    best_pair = None\n",
+    "    min_diff = float('inf')\n",
+    "    \n",
+    "    # Find the pair with the distance closest to the average distance\n",
+    "    for pair, distance in zip(grasp_pair, distances):\n",
+    "        diff = abs(distance - avg_distance)\n",
+    "        if diff < min_diff:\n",
+    "            min_diff = diff\n",
+    "            best_pair = pair\n",
+    "    \n",
+    "    common_distance[i] = avg_distance\n",
+    "    best_pairs[i] = best_pair\n",
+    "\n",
+    "    print(f\"Best grasp pair for Cluster {i+1}: {best_pair} with distance closest to average {avg_distance}\")\n",
+    "    \n",
+    "    # # Visualize the best grasp pair\n",
+    "    # best_pair = np.asarray(best_pair)\n",
+    "    # best_pair = best_pair.reshape(-1, 2)\n",
+    "    # visualize_grasp_pairs(cluster, best_pair)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- bot.cpp:~BotOp:135(0) shutting down BotOp...\n",
-      "-- simulation.cpp:~BotThreadedSim:57(0) shutting down SimThread\n",
-      "-- simulation.cpp:~Simulation:148(0) shutting down Simulation\n"
+      "-- WARNING:kin.cpp:addFrame:193(-1) frame already exists! returning existing without modifications!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 427,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- WARNING:kin.cpp:addFrame:193(-1) frame already exists! returning existing without modifications!\n",
+      "-- WARNING:kin.cpp:addFrame:193(-1) frame already exists! returning existing without modifications!\n"
      ]
     }
    ],
+   "source": [
+    "# Make a frame for each best pair\n",
+    "frames = [None] * len(clusters)\n",
+    "for i, cluster in enumerate(clusters):\n",
+    "  midpoint = (clusters[i].points[best_pairs[i][0]] + clusters[i].points[best_pairs[i][1]]) / 2\n",
+    "  \n",
+    "  # Re adjust the midpoint\n",
+    "  midpoint = midpoint + centre[i]\n",
+    "  # print(\"Grasp pair for cluster\", i, \":\", clusters[i].points[best_pairs[i][0]], \"and\", clusters[i].points[best_pairs[i][1]])\n",
+    "  # print(\"Midpoint:\", midpoint)\n",
+    "  \n",
+    "  \n",
+    "  frame = C.addFrame(\"grasp_marker\" + str(i))\n",
+    "  frame.setShape(ry.ST.marker, [.5])\n",
+    "  frame.setPosition(midpoint)\n",
+    "  frame.setColor([1, 0, 0])\n",
+    "C.view()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1.2.2 Now we do the KOMO problem, ig we run all the points and try to get the feasible ones?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 425,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "try:\n",
     "  del bot\n",
@@ -624,41 +699,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Grasp Pair 1: Points 76 and 111\n",
-      "Grasp Pair 2: Points 43 and 420\n",
-      "Grasp Pair 3: Points 12 and 304\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "  del bot\n",
     "  del komo\n",
     "except:\n",
     "  pass\n",
-    "from scipy.spatial.transform import Rotation as R\n",
-    "\n",
-    "# Iterate over each grasp pair\n",
-    "# point1, point2 = grasp_pairs[2][0]\n",
-    "\n",
-    "for i, cluster in enumerate(clusters):\n",
-    "  point1, point2 = grasp_pairs[i][0]\n",
-    "  print(f\"Grasp Pair {i+1}: Points {point1} and {point2}\")\n",
-    "  \n",
-    "  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Initialize BotOp for robot operation\n",
     "bot = ry.BotOp(C, useRealRobot=False)\n",
     "qHome = bot.get_qHome()\n",
@@ -674,28 +721,10 @@
     "# Define KOMO for motion optimization\n",
     "komo.addObjective([], ry.FS.jointState, [], ry.OT.sos, [1e-1], qHome) #cost: close to qHome\n",
     "\n",
-    "# komo.setPathOpt(1.0, 20, 5.0)  # Duration, number of phases, order\n",
+    "komo.addObjective([], ry.FS.positionDiff, ['l_gripper', 'target'], ry.OT.eq, [1e1]) #constraint: gripper position\n",
     "\n",
-    "# Add objective to align end-effector with grasp frame\n",
-    "komo.addObjective(\n",
-    "    times=[1.0],\n",
-    "    feature=ry.FS.position,\n",
-    "    frames=['l_gripper', f'grasp_{i+1}'],\n",
-    "    type=ry.OT.eq,\n",
-    "    scale=[1e2]\n",
-    ")\n",
-    "komo.addObjective(\n",
-    "    times=[1.0],\n",
-    "    feature=ry.FS.quaternion,\n",
-    "    frames=['l_gripper', f'grasp_{i+1}'],\n",
-    "    type=ry.OT.eq,\n",
-    "    scale=[1e2]\n",
-    ")      \n",
-    "i += 1\n",
-    "# # Optionally, visualize the path\n",
-    "# komo.view(False, f\"Grasp {i+1} trajectory\")\n",
     "\n",
-    "# solve\n",
+    "\n",
     "ret = ry.NLP_Solver(komo.nlp(), verbose=0) .solve()\n",
     "print(ret)\n",
     "\n",
